# zulip-digest

./: .gitignore  README.md  pyproject.toml
zulip_digest/: __main__.py  api.py  cli.py  digest.py  export.py  model.py  summarize.py  updates.py  zulip.py
